[package]
name = "tenrus"
version = "0.1.0"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "AGPL-3.0"
readme = "README.rst"
description = "Travis Encryption in Rust"
repository = "https://github.com/wdv4758h/tenrus/"
keywords = ["travis", "encryption"]

[dependencies]
clap = { version = "2.10.2", features = ["yaml"] }   # CLI arguments
hyper = "0.9"               # HTTP/HTTPS client
serde = "0.8.4"             # JSON
serde_json = "0.8.1"        # JSON
rustc-serialize = "0.3.19"  # base64
openssl = "0.8.2"           # RSA
openssl-sys = "0.7.17"      # RSA

[profile.release]
lto = true
