[package]
name = "tenrus"
version = "0.1.1"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "AGPL-3.0"
readme = "README.rst"
description = "Travis Encryption in Rust"
repository = "https://github.com/wdv4758h/tenrus/"
keywords = ["travis", "encryption"]

[dependencies]
clap = { version = "2.20.0", features = ["yaml"] }   # CLI arguments
hyper = "0.10.0"            # HTTP client
hyper-native-tls = "0.2.1"  # HTTPS implementation of hyper
serde = "0.8.22"            # JSON
serde_json = "0.8.5"        # JSON
rustc-serialize = "0.3.22"  # base64
openssl = "0.9.6"           # RSA

[profile.release]
lto = true
