[package]
name = "tenrus"
version = "0.1.1"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "AGPL-3.0"
readme = "README.rst"
description = "Travis Encryption in Rust"
repository = "https://github.com/wdv4758h/tenrus/"
keywords = ["travis", "encryption"]
edition = "2018"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }   # CLI arguments
rustc-serialize = "0.3.22"  # base64
openssl = "0.10.20"         # RSA
reqwest = "0.9.15"          # HTTPS client

[profile.release]
lto = true
